--- a/components/meetups/MeetupItem.module.css
+++ b/components/meetups/MeetupItem.module.css
@@ -8,7 +8,7 @@
 
 .image {
     width: 100%;
-    height: 20rem;
+    height: auto;
     overflow: hidden;
     border-top-right-radius: 6px;
     border-top-left-radius: 6px;
@@ -49,4 +49,10 @@
 .actions button:active {
     background-color: #ffe2ed;
     box-shadow: inset 2px 2px 1px 1px rgb(82, 82, 82), inset -2px -2px 1px 1px rgb(82, 82, 82);
+}
+
+@media only screen and (min-width: 1400px){
+    .item{
+        width: 60%
+    }
 }
