--- a/components/layout/NavBar.module.css
+++ b/components/layout/NavBar.module.css
@@ -2,7 +2,7 @@
 
 .header {
     width: 100%;
-    height: 8rem;
+    height: 10rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -32,7 +32,8 @@
 .header a {
     text-decoration: none;
     font-size: 1.5rem;
-    color: rgba(107, 225, 249, 0.482);
+    color: rgb(6, 201, 240);
+    text-shadow: 1px 1px black;
 }
 
 .header a:hover,
@@ -40,4 +41,13 @@
 .header a.active {
     color: rgb(107, 225, 249);
     text-shadow: 2px 2px 3px black;
+}
+
+@media only screen and (max-width: 1000px){
+    .header>div {
+        font-size: 2.5rem;
+    }
+    .header a {
+        font-size: 1rem;
+    }
 }
